k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-app
  labels:
    name: simple-app
