k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
  namespace: simple-app
  labels:
    app: simple-app
spec:
  type: ClusterIP
  selector:
    app: simple-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
